<resources>
    <string name="app_name">AppUTHPrueba</string>
    <string name="btn.acpetar">Aceptar</string>
    <string name="Nombres">Nombres</string>
    <string name="Apellidos">Apellidos</string>
    <string name="FechaNacimiento">Fecha de Nacimiento</string>
    <string name="personas_eyebrow">REGISTRO DE PERSONAS</string>
    <string name="personas_title">Nueva persona</string>
    <string name="personas_description">Completa los datos de la persona que deseas agregar.</string>
    <string name="personal_data">Datos personales</string>
    <string name="personal_data_hint">Nombres, apellidos y fecha de nacimiento.</string>
    <string name="contact_data">Información de contacto</string>
    <string name="contact_data_hint">Agrega una dirección, teléfono o correo si los tienes.</string>
    <string name="personas_address">Dirección</string>
    <string name="personas_phone">Teléfono</string>
    <string name="personas_email">Correo electrónico</string>
    <string name="add_person">Agregar persona</string>
</resources>
